# QMLVosk

./: .gitignore  CMakeLists.txt  GrammerModel.cpp  GrammerModel.h  Main.qml  backend.cpp  backend.h  main.cpp
android/: AndroidManifest.xml  build.gradle
android/src/org/verya/QMLVosk/: MainActivity.kt  NotificationHelper.kt  NotificationReceiver.kt  TestBridge.kt
components/: CButton.qml
pages/: SettingsPage.qml
